  * Slovenian (Andrej Znidarsic)
  * German (Holger Wansing) (Closes: #679314)
  * Slovak (Ivan Masár) (Closes: #679448)

  [ David Kalnischkies ]
  * cmdline/apt-internal-solver.cc, cmdline/apt-mark.cc:
    - typo fixes and unfuzzy translations
  * debian/control:
    - libapt-{pkg,inst} packages should be in section 'libs' instead
      of 'admin' as by ftp-master override request in #677596

 -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 25 Jun 2012 18:07:13 +0200

apt (0.9.7) unstable; urgency=low

  [ Julian Andres Klode ]
  * apt-pkg/contrib/mmap.cc:
    - Fix the Fallback option to work correctly, by not calling
      realloc() on a map mapped by mmap(), and by using malloc
      and friends instead of new[].
    - Zero out the new memory allocated with realloc().

  [ Daniel Hartwig ]
  * apt-pkg/pkgcachegen.cc:
    - always reset _error->StackCount in MakeStatusCache (Closes: #677175)

  [ David Kalnischkies ]
  * apt-pkg/deb/deblistparser.cc:
    - ensure that mixed positive/negative architecture wildcards
      are handled in the same way as dpkg handles them
    - use PackageArchitectureMatchesSpecification filter
  * apt-pkg/cachefilter.cc:
    - add PackageArchitectureMatchesSpecification (Closes: #672603)
  * apt-pkg/cacheset.cc:
    - add PackageContainerInterface::FromGroup to support
      architecture specifications with wildcards on the commandline
  * apt-pkg/pkgcache.cc:
    - do a string comparision for architecture checking in IsMultiArchImplicit
      as 'unique' strings in the pkgcache aren't unique (Closes: #677454)
  * buildlib/configure.mak:
    - print a message detailing how to get config.guess and config.sub
      in case they are not in /usr/share/misc (Closes: #677312)
  * cmdline/apt-get.cc:
    - print a friendly message in 'download' if a package can't be
      downloaded (Closes: #677887)

 -- Michael Vogt <mvo@debian.org>  Tue, 19 Jun 2012 16:42:43 +0200

apt (0.9.6) unstable; urgency=low

  [ David Kalnischkies ]