@@ -11,10 +11,7 @@ SOURCE = $(wildcard *.sgml)
 DEBIANDOC_HTML_OPTIONS=-l en.UTF-8
 include $(DEBIANDOC_H)
 
-MANPAGEPO = $(patsubst %.po,%,$(notdir $(wildcard po/*.po)))
-MANPAGEPOLIST = $(patsubst %,manpages-translation-%,$(MANPAGEPO))
-
-doc: manpages
+doc: manpages debiandoc
 
 # Do not use XMLTO, build the manpages directly with XSLTPROC
 ifdef XSLTPROC
@@ -27,29 +24,17 @@ LOCAL := manpage-$(firstword $(SOURCE))
 $(LOCAL)-LIST := $(SOURCE)
 
 # Install generation hooks
-manpages: $(MANPAGEPOLIST) $($(LOCAL)-LIST)
+manpages: $($(LOCAL)-LIST)
 
 $($(LOCAL)-LIST) :: % : %.xml $(STYLESHEET) $(INCLUDES)
 	echo Creating man page $@
 	$(XSLTPROC) -o $@ $(STYLESHEET) $<
-
-$(MANPAGEPOLIST) :: manpages-translation-% : %/makefile po4a
-	$(MAKE) -C $(dir $<) doc
-
-.PHONY: manpages dirs-manpage-subdirs $(MANPAGEPOLIST)
-dirs: dirs-manpage-subdirs
-dirs-manpage-subdirs:
-	for i in $(MANPAGEPO); do \
-		test -d $$i || mkdir $$i; \
-		test -f $$i/makefile || sed "s#@@LANG@@#$$i#" lang.makefile > $$i/makefile; \
-	done
 
 # Clean rule
 .PHONY: veryclean/$(LOCAL)
 veryclean: veryclean/$(LOCAL)
 veryclean/$(LOCAL):
 	-rm -rf $($(@F)-LIST)
-
 endif
 
 # Chain to the manpage rule
@@ -65,7 +50,7 @@ TO = $(DOC)
 TARGET = binary
 include $(COPY_H)
 
-.PHONY: clean clean-subdirs veryclean veryclean-subdirs all binary doc
+.PHONY: clean clean-subdirs veryclean veryclean-subdirs all binary doc stats
 
 clean: clean-subdirs
 veryclean: veryclean-subdirs
@@ -80,24 +65,53 @@ veryclean-subdirs:
 		rm -rf $$dir; \
 	done
 
-.PHONY: update-po po4a stats
+stats:
+	for i in po/*.po; do echo -n "$$i: "; msgfmt --output-file=/dev/null --statistics $$i; done
 
 ifdef PO4A
-doc: po4a
+DOCUMENTATIONPO = $(patsubst %.po,%,$(notdir $(wildcard po/*.po)))
+MANPAGEPOLIST = $(addprefix manpages-translation-,$(DOCUMENTATIONPO))
+DEBIANDOCPOLIST = $(addprefix debiandoc-translation-,$(DOCUMENTATIONPO))
+
+MANPAGEDIRLIST = $(addsuffix /makefile,$(DOCUMENTATIONPO))
+
+.PHONY: update-po po4a $(MANPAGEPOLIST) $(MANPAGEDIRLIST)
+
+manpages: $(MANPAGEPOLIST)
+debiandoc: $(DEBIANDOCPOLIST)
+po4a: $(MANPAGEPOLIST) $(DEBIANDOCPOLIST)
 
 update-po:
 	po4a --previous --no-backups --force --no-translations \
 		--package-name='$(PACKAGE)-doc' --package-version='$(PACKAGE_VERSION)' \
 		--msgid-bugs-address='$(PACKAGE_MAIL)' po4a.conf
 
-po4a:
-	po4a --previous --no-backups \
+$(MANPAGEPOLIST) :: manpages-translation-% : %/makefile po4a.conf
+	po4a --previous --no-backups --translate-only $(dir $<)apt.ent \
+		$(patsubst %,--translate-only $(dir $<)%,$(patsubst %.1.xml,%.$(subst /,,$(dir $<)).1.xml,$(wildcard *.1.xml))) \
+		$(patsubst %,--translate-only $(dir $<)%,$(patsubst %.2.xml,%.$(subst /,,$(dir $<)).2.xml,$(wildcard *.2.xml))) \
+		$(patsubst %,--translate-only $(dir $<)%,$(patsubst %.3.xml,%.$(subst /,,$(dir $<)).3.xml,$(wildcard *.3.xml))) \
+		$(patsubst %,--translate-only $(dir $<)%,$(patsubst %.4.xml,%.$(subst /,,$(dir $<)).4.xml,$(wildcard *.4.xml))) \
+		$(patsubst %,--translate-only $(dir $<)%,$(patsubst %.5.xml,%.$(subst /,,$(dir $<)).5.xml,$(wildcard *.5.xml))) \
+		$(patsubst %,--translate-only $(dir $<)%,$(patsubst %.6.xml,%.$(subst /,,$(dir $<)).6.xml,$(wildcard *.6.xml))) \
+		$(patsubst %,--translate-only $(dir $<)%,$(patsubst %.7.xml,%.$(subst /,,$(dir $<)).7.xml,$(wildcard *.7.xml))) \
+		$(patsubst %,--translate-only $(dir $<)%,$(patsubst %.8.xml,%.$(subst /,,$(dir $<)).8.xml,$(wildcard *.8.xml))) \
 		--package-name='$(PACKAGE)-doc' --package-version='$(PACKAGE_VERSION)' \
 		--msgid-bugs-address='$(PACKAGE_MAIL)' po4a.conf
-endif
+	$(MAKE) -C $(dir $<) manpages
 
-stats:
-	for i in po/*.po; do echo -n "$$i: "; msgfmt --output-file=/dev/null --statistics $$i; done
+$(DEBIANDOCPOLIST) :: debiandoc-translation-% : %/makefile po4a.conf
+	po4a --previous --no-backups --translate-only $(dir $<)apt.ent \
+		$(patsubst %,--translate-only $(dir $<)%,$(patsubst %.sgml,%.$(subst /,,$(dir $<)).sgml,$(wildcard *.sgml))) \
+		--package-name='$(PACKAGE)-doc' --package-version='$(PACKAGE_VERSION)' \
+		--msgid-bugs-address='$(PACKAGE_MAIL)' po4a.conf
+	$(MAKE) -C $(dir $<) debiandoc
+
+dirs: $(MANPAGEDIRLIST)
+$(MANPAGEDIRLIST) :: %/makefile : lang.makefile
+	test -d $(dir $@) || mkdir $(dir $@)
+	sed "s#@@LANG@@#$(subst /,,$(dir $@))#" $< > $@
+endif
 
 ifdef DOXYGEN
 DOXYGEN_SOURCES = $(shell find $(BASE)/apt-pkg -not -name .\\\#* -and \( -name \*.cc -or -name \*.h \) )
@@ -114,5 +128,5 @@ $(BUILD)/doc/doxygen-stamp: $(DOXYGEN_SOURCES) $(BUILD)/doc/Doxyfile
 	$(DOXYGEN) $(BUILD)/doc/Doxyfile
 	touch $(BUILD)/doc/doxygen-stamp
 
-doc: $(BUILD)/doc/doxygen-stamp
+debiandoc: $(BUILD)/doc/doxygen-stamp
 endif
