@@ -14,8 +14,12 @@ apt (0.9.7.1) UNRELEASED; urgency=low
   * debian/control:
     - libapt-{pkg,inst} packages should be in section 'libs' instead
       of 'admin' as by ftp-master override request in #677596
+    - demote debiandoc-sgml to Build-Depends-Indep
+  * doc/makefile:
+    - separate translation building of debiandoc from manpages
+      so that we don't need to build debiandoc for binary packages
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 25 Jun 2012 18:07:13 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Fri, 29 Jun 2012 13:52:30 +0200
 
 apt (0.9.7) unstable; urgency=low
 
